# APASSTools

./: .clang-format  .clang-tidy  .cmake-format.json  .cmake-format.yaml  .gitignore  APASSTools.desktop  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.chglog/: RELEASE.tpl.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  main.yml  pull_request.yml
cmake/: BuildIcon.cmake  DeployQt.cmake  FindStaticQt5.cmake
data/: APASSTools.desktop
data/resources/: index.theme
src/: CMakeLists.txt  Macros.h  config.h.in  config.hpp.in  iced.rs  main.cpp  main.rs  qt.rs
src/assets/: apasstools.qrc  apasstools.rc  apasstools.rc.in  assets.qrc  assets.rc
src/assets/icons/: icons.qrc
src/common/: APASS.cpp  APASS.h  APASS.hpp  CSVObject.cpp  CSVObject.h  CSVObject.hpp  Comet.cpp  Comet.h  Comet.hpp  Error.hpp  Icon.cpp  Icon.hpp  PRN.cpp  PRN.h  PRNFile.cpp  PRNFile.h  PRNFile.hpp  Settings.cpp  Settings.h  Settings.hpp  TDF.cpp  TDF.h  TDFFile.cpp  TDFFile.h  TDFFile.hpp
src/ui/APASSTools/: APASSTools.cpp  APASSTools.h  APASSTools.hpp  APASSTools.ui
src/ui/AboutDialog/: AboutDialog.cpp  AboutDialog.h  AboutDialog.hpp  AboutDialog.ui
src/ui/CSVDialog/: CSVDialog.cpp  CSVDialog.h  CSVDialog.hpp  CSVDialog.ui
src/ui/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.hpp  SettingsDialog.ui
src/ui/WebDialog/: WebDialog.cpp  WebDialog.h  WebDialog.hpp  WebDialog.ui
