cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

project(
  APASSTools
  LANGUAGES CXX
  VERSION 0.1.1
  HOMEPAGE_URL https://github.com/ATiltedTree/APASSTools
)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory("src")

if(UNIX)
  install(FILES ${CMAKE_SOURCE_DIR}/LICENSE DESTINATION share/doc/apasstools)
  install(FILES ${CMAKE_SOURCE_DIR}/data/apasstools.desktop
          DESTINATION share/applications
  )
  install(FILES ${CMAKE_SOURCE_DIR}/data/apasstools.svg
          DESTINATION share/icons/hicolor/scalable/apps
  )
endif()

if(WIN32)
  list(APPEND CPACK_GENERATOR "NSIS64")

  set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_PROJECT_NAME})
  set(CPACK_NSIS_MUI_ICON ${CMAKE_SOURCE_DIR}/data/apasstools.ico)
  set(CPACK_NSIS_INSTALLED_ICON_NAME bin/apasstools.exe)
  set(CPACK_NSIS_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
  set(CPACK_NSIS_DISPLAY_NAME ${CMAKE_PROJECT_NAME})
  set(CPACK_NSIS_MENU_LINKS "bin/apasstools.exe" ${CMAKE_PROJECT_NAME})
  set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
elseif(UNIX)
  list(APPEND CPACK_GENERATOR "DEB")

  set(CPACK_DEBIAN_PACKAGE_MAINTAINER "ATiltedTree")
  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5gui5, libqt5svg5, libqt5network5")
  set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
elseif(APPLE)

endif()

set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_SYSTEM_NAME}")
set(CPACK_PACKAGE_VENDOR "ATiltedTree")
set(CPACK_PACKAGE_DESCRIPTION
    "A toolkit for managing and converting APASS catalog files"
)
set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.md)

include(CPack)
