[package]
name = "apasstools"
version = "0.1.0"
authors = ["Tilmann Meyer <allescrafterx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git" }
qt_widgets = "0.5.0"
qt_core = "0.5.0"
cpp_core = "0.6.0"

[[bin]]
name = "qt"
path = "src/qt.rs"

[[bin]]
name = "iced"
path = "src/iced.rs"
